--- a/styles.css
+++ b/styles.css
@@ -93,6 +93,10 @@ button#calculate:hover {
     align-items: center;
 }
 
+#chart {
+    width: 100%;
+}
+
 @media (max-width: 900px) {
     #container {
         grid-template-columns: 1fr;
