--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,36 @@ button#calculate:hover {
     width: 100%;
 }
 
+/* Tab Styles */
+.tab-container {
+    width: 100%;
+    display: flex;
+}
+
+.tab {
+    cursor: pointer;
+    padding: 10px;
+    border: 1px solid #ccc;
+    display: inline-block;
+    background-color: #f9f9f9;
+    width: 50%;
+    text-align: center;
+}
+
+.active-tab {
+    background-color: #e9e9e9;
+    font-weight: bold;
+}
+.content-box {
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin-top: 5px;
+}
+.hidden {
+    display: none;
+}
+
+
 @media (max-width: 900px) {
     #container {
         grid-template-columns: 1fr;
