Added Line chart comparison

--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,10 @@ input, select, button {
     width: 100%;
 }
 
+#lineChart {
+    width: 100%;
+}
+
 /* Tab Styles */
 .tab-container {
     width: 100%;
