--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,13 @@ input, select, button {
     align-items: center;
 }
 
-
+#vehicleList li {
+    border: 1px solid #6587e5;
+    padding: 10px;
+    margin: 10px 0;
+    background-color: #f0f0f0;
+    list-style-type: none;
+}
 
 /* Tab Styles */
 .tab-container {
