--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
     padding: 0;
 }
 
+
 body {
     font-family: Arial, sans-serif;
 }
@@ -18,6 +19,18 @@ body {
     border-radius: 8px;
     width: 73%;
     margin-top: 15px;
+    position: relative;
+    height: 12vw;
+}
+
+
+  
+.vertical-center {
+margin: 0;
+position: absolute;
+top: 50%;
+-ms-transform: translateY(-50%);
+transform: translateY(-50%);
 }
 
 .box {
@@ -25,6 +38,7 @@ body {
     padding: 20px;
     border-radius: 8px;
     background-color: #f9f9f9;
+    margin: 0.5vw;
 }
 
 #ratesBox {
@@ -132,13 +146,14 @@ input, select, button {
     display: none;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 900px) {
+
     #container {
         max-width: 75vw;
         margin: auto;
         padding: 20px;
         display: grid;
-        grid-gap: 20px;
+        /*grid-gap: 20px;*/
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-areas: 
             "rates vehicle-input vehicle-selection"
